--- a/app/family/(components)/Family.css
+++ b/app/family/(components)/Family.css
@@ -1,7 +1,7 @@
 .family{
   display: grid;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 .avatar-card{
